--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com'
+group = 'com.yoc.wms'
 version = '0.0.1-SNAPSHOT'
-description = 'company'
+description = 'WMS Mail Service'
 
 java {
     toolchain {
